# teslaDashboard

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp
Resources/: hvachandler.cpp  hvachandler.h  system.cpp  system.h  system2.cpp  system2.h  test2.cpp  test2.h
